# perfkit

./: AUTHORS  HACKING  Makefile.am  Makefile.inc  README  autogen.sh  configure.ac  setup-build-env
bindings/vala/: Makefile.am  config.vapi
cut-n-paste/: egg-line.c  egg-line.h  egg-time.h
data/icons/: Makefile.am  perfkit.h  plugin.h  pointer.h  selection.h
data/settings/: .gitignore  Makefile.am  org.perfkit.profiler.gschema.xml
doc/: OVERVIEW.perfkit-agent
doc/reference/: Makefile.am
doc/reference/perfkit-agent/: Makefile.am  perfkit-agent-docs.sgml
doc/reference/perfkit-gui/: Makefile.am  perfkit-gui-docs.sgml
doc/reference/perfkit-profiler/: .gitignore  Makefile.am  perfkit-profiler-docs.sgml
perfkit/: Makefile.am  perfkit.h  pk-channel.c  pk-channel.h  pk-connection-lowlevel.h  pk-connection.c  pk-connection.h  pk-encoder.c  pk-encoder.h  pk-log.h  pk-manager.c  pk-manager.h  pk-manifest.c  pk-manifest.h  pk-marshal.c  pk-marshal.h  pk-marshal.list  pk-model-memory.c  pk-model-memory.h  pk-model.c  pk-model.h  pk-plugin.c  pk-plugin.h  pk-sample.c  pk-sample.h  pk-source.c  pk-source.h  pk-subscription.c  pk-subscription.h
perfkit-agent/: Makefile.am  main.c  perfkit-agent.h  pka-channel.c  pka-channel.h  pka-config.c  pka-config.h  pka-context.c  pka-context.h  pka-encoder.c  pka-listener-closures.h  pka-listener-lowlevel.h  pka-listener.c  pka-listener.h  pka-log.c  pka-log.h  pka-manager.c  pka-manager.h  pka-manifest.c  pka-plugin.c  pka-plugin.h  pka-private.h  pka-sample.c  pka-sample.h  pka-source-simple.c  pka-source-simple.h  pka-source.c  pka-spawn-info.c  pka-spawn-info.h  pka-subscription.c  pka-subscription.h  pka-util.c  pka-util.h
perfkit-agent/listeners/: Makefile.am  pka-listener-dbus.c  pka-listener-dbus.h
perfkit-agent/sources/: Makefile.am  cpu.c  gdkevent-module.c  gdkevent.c  memory.c  sched.c  src-utils.c
perfkit-gui/: Makefile.am  main.c  perfkit-gui.h  pkg-channel-page.c  pkg-channel-page.h  pkg-channels-page.c  pkg-channels-page.h  pkg-closures.c  pkg-closures.h  pkg-log.c  pkg-log.h  pkg-page.c  pkg-page.h  pkg-path.c  pkg-path.h  pkg-plugin-page.c  pkg-plugin-page.h  pkg-source-page.c  pkg-source-page.h  pkg-sources-page.c  pkg-sources-page.h  pkg-subscription-page.c  pkg-subscription-page.h  pkg-util.c  pkg-util.h  pkg-window.c  pkg-window.h
perfkit-profiler/: .gitignore  Makefile.am  main.c  perfkit-profiler.h  ppg-about-dialog.c  ppg-about-dialog.h  ppg-actions.c  ppg-actions.h  ppg-add-instrument-dialog.c  ppg-add-instrument-dialog.h  ppg-animation.c  ppg-animation.h  ppg-avahi.c  ppg-clock-source.c  ppg-clock-source.h  ppg-color.c  ppg-color.h  ppg-configure-instrument-dialog.c  ppg-configure-instrument-dialog.h  ppg-cpu-instrument.c  ppg-cpu-instrument.h  ppg-discover-dialog.c  ppg-discover-dialog.h  ppg-edit-channel-task.c  ppg-edit-channel-task.h  ppg-frame-source.c  ppg-frame-source.h  ppg-gdk-instrument.c  ppg-gdk-instrument.h  ppg-gtk-instrument.c  ppg-gtk-instrument.h  ppg-header.c  ppg-header.h  ppg-hud-window.c  ppg-hud-window.h  ppg-instrument-menu.c  ppg-instrument-menu.h  ppg-instrument-view.c  ppg-instrument-view.h  ppg-instrument.c  (+79 more)
perfkit/connections/: pk-connection-dbus.c  pk-connection-dbus.h
tests/perfkit/: .gitignore  Makefile.am  manifest.h  sample.h  test-pk-model-memory.c
tests/perfkit-agent/: Makefile.am
tools/: Makefile.am  perfkit-shell.c  perfkit-shell.input  perfkit-support  perfkit-support.c
uber/: Makefile.am  g-ring.c  g-ring.h  uber-graph.c  uber-heat-map.c  uber-heat-map.h  uber-label.c  uber-label.h  uber-line-graph.c  uber-line-graph.h  uber-scatter.c  uber-scatter.h  uber.h
